examples/test/testpolicy1851.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1851
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key12: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value20
      podSelector:
        matchLabels:
          key25: value37
          key26: value6
          key27: value43
